src/styles/client.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif;
}

.navbar {
    position: fixed;
    width: 100%;
    transition: background-color .3s ease;
    z-index: 999;
    padding-inline: 2vw;
}

.navbar-brand {
    font-size: 1.5rem;
    font-weight: bold;
    font-style: italic;
    color: rgba(252,128,2,255);
} 

.logo {
    height: 80px;
} 

.navbar .dropdown-menu ul > li > a {
    color: black;
}

.navbar .nav-item > .nav-link {
    color: white;
    transition: color .3s ease;

}

.navbar .signup-item {
    background-color: rgba(252,128,2,255);
    border-radius: 6px;
    padding-inline: .7rem;
    align-self: flex-start;
}

.navbar ul:last-of-type .nav-item{
    margin-right: 1.5rem;
}

.navbar ul:last-of-type .nav-item {
    display: flex;
    align-items: center;
    color: white;
}

.navbar .nav-item .fa-globe {
    font-size: 1.2rem;
    margin-right: .4rem;
    transition: color .3s ease;
}

.navbar .nav-item .bx-user {
    font-size: 1.6rem;
    margin-right: .4rem;
    transition: color .3s ease;
}

#menu-btn {
  border-color: rgba(252,128,2,255);
  outline: none;
  box-shadow: none; 
}
  
#menu-btn:focus {
    outline: none; 
    box-shadow: none; 
}

.navbar-toggler .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(252,128,2,255)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
}
  

/* HOME */
#home {
    background: linear-gradient(rgba(0, 0, 0, 0.333), rgba(0, 0, 0, 0.333)), 
                url(../../assets/img/bg.jpg);
    background-size: cover;
    min-height: 100vh;
    width: 100%;
    
}

.home-container {
    padding-top: 15%;
    padding-left: 10%;
    color: white;
}

.home-container h1 {
    font-size: 5.5rem;
    text-shadow: -1px 1px 0 #0000004d,
                         1px 1px 0 #0000004d,
                         1px -1px 0 #0000004d,
                         -1px -1px 0 #0000004d;
}

.home-container p {
    font-size: 1.2rem;
    text-shadow: -1px 1px 0 #0000004d,
                         1px px 0 #0000004d,
                         1px -1px 0 #0000004d,
                         -1px -1px 0 #0000004d;
}

#book-btn {
    background-color: rgba(252,128,2,255);
    padding: .8rem 3rem;
    border: none;
}

@media screen and (max-width: 1393px) {

    .home-container {
        padding-top: 22%;
    }

    .home-container h1 {
        font-size: 4rem;
    }

    .home-container p {
        font-size: 1rem;
    }

    #book-btn {
        background-color: rgba(252,128,2,255);
        padding: .5rem 2rem;
        border: none;
    }
}

@media screen and (max-width: 985px) {
    .home-container {
        padding-top:30%;
    }

    .home-container h1 {
        font-size: 3.5rem;
    }

    .home-container p {
        font-size: 1rem;
    }

    #book-btn {
        background-color: rgba(252,128,2,255);
        padding: .5rem 2rem;
        border: none;
    }
}

@media screen and (max-width: 655px) {
    .home-container {
        padding-top:40%;
    }

    .home-container h1 {
        font-size: 3.5rem;
    }

    .home-container p {
        font-size: 1rem;
    }

    #book-btn {
        background-color: rgba(252,128,2,255);
        padding: .5rem 2rem;
        border: none;
    }
}

@media screen and (max-width: 500px) {
    .home-container {
        padding-top:45%;
    }

    .home-container h1 {
        font-size: 3rem;
    }

    .home-container p {
        font-size: .9rem;
    }

    #book-btn {
        background-color: rgba(252,128,2,255);
        padding: .5rem 2rem;
        border: none;
    }
}

/* SERVICES */
#services {
    width: 100%;
    background-color: white;
    position: relative;
}

.card-container {
    background-color: red;
    width: 100%;
    min-height: 100%;
    position: absolute;
}


#card-img-3 {
    max-height: 232px;
    max-width: 414px;
    object-fit: cover;
}


.card {
    transition: transform 0.3s ease, box-shadow 0.3s ease;
  }
  
.card:hover {
    transform: translateY(-10px);
    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1); 
  }

/* BOOKING */
.booking-container {
  max-width: 800px; 
  margin: 0 auto; 
 
}

/* FOOTER */
.text-orange{
    color: rgba(252,128,2,255);
}

